Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_PL_Email_Address__mdt/SMAX_PS_Service_Alert_PL_Email_Address__mdt.object-meta.xml
<CustomObject>
    <description>When a Service Alert is created an email will be sent to the matching Product Line&#39;s email address.</description>
    <label>Service Alert PL Email Address</label>
    <pluralLabel>Service Alert PL Email Addresses</pluralLabel>
</CustomObject>