Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_PL_Email_Address__mdt/fields/SMAX_PS_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Email_Addresses__c</fullName>
    <description>One or more Outlook Distribution Email Addresses separated by commas.</description>
    <label>Email Addresses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>