Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_PL_Email_Address__mdt/fields/SMAX_PS_Ignore_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Ignore_Product_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Always sent a notification email to this distribution list regardless of the Product Line</description>
    <label>Ignore Product Line?</label>
    <type>Checkbox</type>
</CustomField>