Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_PL_Email_Address__mdt/fields/SMAX_PS_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Product_Line__c</fullName>
    <label>Product Line</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>