Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_PL_Email_Address__mdt/listViews/SMAX_PS_Service_Alert_PL_Emails.listView-meta.xml
<ListView>
    <fullName>SMAX_PS_Service_Alert_PL_Emails</fullName>
    <columns>DeveloperName</columns>
    <columns>SMAX_PS_Product_Line__c</columns>
    <columns>SMAX_PS_Ignore_Product_Line__c</columns>
    <columns>SMAX_PS_Email_Addresses__c</columns>
    <filterScope>Everything</filterScope>
    <label>Service Alert PL Emails</label>
    <language>en_US</language>
</ListView>